// filepath: pkg/queue/proto/requests/import_queue_request.proto
// file: queue/proto/requests/import_queue_request.proto
// version: 1.0.0
// guid: 5d6e7f8a-9b0c-1d2e-3f4a-5b6c7d8e9f0a
//
// Request definitions for queue module
//
edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "pkg/queue/proto/export_format.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";

/**
 * Request to import queue data from external source.
 */
message ImportQueueRequest {
  // Name of the queue to import into
  string queue_name = 1;
  
  // Source location for import data
  string source_path = 2;
  
  // Format of the import data
  gcommon.v1.queue.ExportFormat format = 3;
  
  // Whether to overwrite existing data
  bool overwrite = 4;
  
  // Whether to validate data before import
  bool validate = 5;
  
  // Maximum number of messages to import
  uint64 max_messages = 6;
  
  // Import timeout in milliseconds
  uint64 timeout_ms = 7;
}
